Fix HTML formatting issues in index.html

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </nav>
     
     <section class="intro animate-scroll" id="intro">
-      <h2>7 Wonders of the World</h2>
+      <h2>7 Wonders</h2>
      <p>
       Explore the magnificent wonders that showcase the brilliance of human creativity and the beauty of our planet.
       From ancient marvels to modern masterpieces, these sites are a testament to our shared heritage.</p>
@@ -109,4 +109,5 @@
 
 </body>
 </html>
+
 
